bug fixes, improved responsiveness (new donation button for sponsor/student pages on mobile)

--- a/css/current_list.css
+++ b/css/current_list.css
@@ -64,3 +64,19 @@ section.window img:hover {
     width: 100%;
     height: 100%;
 }
+
+/************* RESPONSIVE ***************/
+@media (max-width: 800px) {
+    .new-donation {
+        position: absolute !important;
+        top: 100px;
+        right: 10px;
+        z-index: 99;
+    }
+    
+    section.window {
+        width: 95%;
+        height: 94vh;
+        top: 3vh;
+    }
+}
