--- a/css/form.css
+++ b/css/form.css
@@ -108,3 +108,10 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
 input[type="number"] {
     -moz-appearance: textfield;
 }
+
+/************* RESPONSIVE ***************/
+@media (max-width: 800px) {
+    li {
+        font-size: calc(10px + 1vw);
+    }
+}
